Fix style to center 'Mindfulness - Mental' section content text when on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,11 +293,8 @@ footer {
         display: block;
     }
     
-    .column {
-        text-align: center;
-    }
-
-    #mindfulness-content {
+    .column,
+    #mindfulness-content div > p {
         text-align: center;
     }
 
